--- a/style.css
+++ b/style.css
@@ -32,15 +32,23 @@
         background-color: #EEE;
     }
     table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(3) > a:nth-child(1) > img:nth-child(1) { /* Main logo */
-       filter: invert(0.92);       
+       filter: invert(0.92);
     }
 
-    body > table:nth-child(1) > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(3) > table:nth-child(6) { /* Footer links */
+    body > table > tbody > tr > td > table:nth-child(4) > tbody:nth-child(1) > tr:nth-child(1) > td:nth-child(1) > font:nth-child(4) > table:nth-child(382),
+    body > table > tbody > tr > td > table:nth-child(6) { /* Footer links */
         border: 0 none;
         max-width: 10em !important;
-        background-color: #151515 !important;
+        background-color: #222 !important;
+        white-space: pre;
+    }
+    img[height="14"]{ /* Footer bullet points */
+        filter: invert(0.92);
     }
     body table tbody tr td table tbody tr td font table tbody tr td { /* Header & Footer banners */
         background-color: #222 !important;
+    }
+    body > table > tbody > tr > td > table > tbody > tr > td > font:nth-child(4) > table:nth-child(384) > tbody:nth-child(1) > tr:nth-child(1) > td { /* Footer bar*/
+        background-color: #151515 !important;
     }
 }
